--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/. bin
+./ bin *
+bin/polls/PolllnitailArrays.class
+bin/polls/PollScanners.class
+bin/polls/PollStatistics.class
+bin/polls/PollsWithMethod.class
